Update & Refactoring: change page route

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,3 +29,7 @@ body {
 .fcenter {
   @apply flex items-center justify-center
 }
+
+.abcenter {
+  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2
+}
