--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,9 +27,31 @@ body {
 }
 
 .fcenter {
-  @apply flex items-center justify-center
+  @apply flex items-center justify-center;
 }
 
 .abcenter {
-  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2
+  @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
+}
+
+button, .button-prime {
+  cursor: pointer;
+  width: fit-content;
+  
+  @apply fcenter 
+        hover:brightness-75 
+        duration-default
+        bg-black 
+        px-[2.25em] 
+        py-[0.8em] 
+        text-prime-white 
+        rounded-full;
+}
+button[disabled="true"], .button-disabled {
+  @apply bg-gray-500 text-white font-bold py-2 px-4 rounded cursor-not-allowed;
+}
+
+input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
