Update: fix styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@ input:focus {
 }
 
 .clickable {
-  @apply duration-default active:scale-95 hover:brightness-75;
+  @apply duration-default active:scale-95 hover:brightness-75 cursor-pointer;
 }
 
 ::-webkit-scrollbar {
