Update: Checking password process

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,17 @@ input:focus {
   border: none;
   outline: none;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 #nprogress .bar {
   @apply !bg-purple;
